commit para politicas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
           <ion-item routerLink="producto">Contáctanos</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="shopping-cart">Políticas de Privacidad</ion-item>
+          <ion-item routerLink="politicas">Políticas de Privacidad</ion-item>
         </ion-menu-toggle>
       </ion-list>
       <div class="social-media" style="background: #2153FF !important; ">
