--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -86,6 +86,7 @@ ion-row{
     //justify-content: flex-end;
     text-align: right!important;
     //margin: 0% 0% 0% 80%;
+    z-index: 9;
 }
 
 .borrar_content > img{
