--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -239,9 +239,11 @@ vertical-align: middle;
 
 #mas{
     margin-right:  12px;
+    z-index: 9;
 }
 #menos{
         margin-left:  12px;
+        z-index: 9;
 
 }
 
