#173932799 arreglo final de politicas/movil

--- a/src/app/politicas/politicas.page.html
+++ b/src/app/politicas/politicas.page.html
@@ -1,5 +1,4 @@
 <app-header></app-header>
-
 <ion-content>
   <div class= "contenedor-page">
     <ion-label class="titulo">Políticas de Privacidad</ion-label>
@@ -9,3 +8,4 @@
     </div>
   </div>
 </ion-content>
+<app-footer></app-footer>
