[#173932799] agregacion de un modal de verificación de un producto/oferta del carrito

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,6 +4,16 @@
 /** Ionic CSS Variables **/
 :root {
 
+  .pregunta .modal-wrapper{
+    padding-top: 50px;
+    width: 300px;
+    height: 200px; 
+    border-radius: 10px;
+    *{
+      font-family:'MyriadProSemibold' !important ;
+    }
+  }
+
   .DetallesProducto .modal-wrapper{
     padding-top: 50px;
     width: 300px;
