datos para poner numero en el logo de carrito

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -100,3 +100,11 @@ ion-menu-button{
     top:20px;
     left:10px;
   }
+
+  .numero{
+    position: absolute;
+    left: 14.1rem;
+    top: 0.1rem;
+    color: var(--ion-color-azul-oscuro);
+    font-size: 0.9rem;
+}
