--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,28 +1,8 @@
 <!--<ion-header>-->
-<div class = 'header'>
-  <div class= "menu_hamburguesa"><ion-menu-button menu="main-menu"></ion-menu-button></div>
-  <!--<div class ="btn_regresar"> <img src="../assets/img/regresar.png"  (click)="regresar()"> </div>-->
-  <!--<ion-buttons slot="start"><ion-menu-button color="primary" menu="main-menu"></ion-menu-button></ion-buttons>-->
-  <div class= "headerR" > <img src="../assets/img/header_final.png" size= 12></div>
-  <div class= "carrito_logo"> <img [src]="carrito ? carrito :'../assets/img/carrito.png'" (click)="changeCart()"></div>
-</div>
-  <!--<div class= "carrito_logo"> <ion-img [src]="carrito" (click)="openCart(); changeCart()"></ion-img></div>-->
-<!--
-  <ion-toolbar class="half-circle"> 
-
-      <ion-row class = "container">
-        <ion-col class= "col_menu" size=2>        
-          <div class= "menu_hamburguesa"> <img src="../assets/img/menu_lateral.png"></div>  
-        </ion-col>
-        <ion-col class= "col_logo" size= 8>
-          <div class= "logo"> <img src="../assets/img/cabuto.png"></div> 
-        </ion-col>
-        <ion-col class="col_carrito" size=2>
-          <div class= "carrito_logo"> <ion-img [src]="carrito" (click)="openCart(); changeCart()"></ion-img></div>
-        </ion-col>
-      </ion-row>
-
-  </ion-toolbar>
--->
-      
-<!--</ion-header>-->
+  <div class = 'header'>
+    <div class= "menu_hamburguesa"><ion-menu-button menu="main-menu"></ion-menu-button></div>
+    <!--<div class ="btn_regresar"> <img src="../assets/img/regresar.png"  (click)="regresar()"> </div>-->
+    <!--<ion-buttons slot="start"><ion-menu-button color="primary" menu="main-menu"></ion-menu-button></ion-buttons>-->
+    <div class= "headerR" > <img src="../assets/img/header_final.png" size= 12></div>
+    <div class= "carrito_logo"><div class="numero">{{number}}</div><img [src]="carrito ? carrito :'../assets/img/carrito.png'" (click)="changeCart()"></div>
+  </div>
