--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -23,6 +23,7 @@ ion-header{
 
 }
 
+
 .menu_hamburguesa > img{
     /*width: 120%;
     height: 180%;
@@ -103,8 +104,9 @@ ion-menu-button{
 
   .numero{
     position: absolute;
-    left: 14.1rem;
-    top: 0.1rem;
-    color: var(--ion-color-azul-oscuro);
+    left: 15rem;
+    top: -0.9rem;
+    color: white;
     font-size: 0.9rem;
+
 }
