--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,5 +4,5 @@
     <!--<div class ="btn_regresar"> <img src="../assets/img/regresar.png"  (click)="regresar()"> </div>-->
     <!--<ion-buttons slot="start"><ion-menu-button color="primary" menu="main-menu"></ion-menu-button></ion-buttons>-->
     <div class= "headerR" > <img src="../assets/img/header_final.png" size= 12></div>
-    <div class= "carrito_logo"><img [src]="carrito ? carrito :'../assets/img/carrito.png'" (click)="changeCart()"><div class="numero">{{number}}</div></div>
+    <div class= "carrito_logo"><img [src]="carrito ? carrito :'../assets/img/carrito.png'" (click)="changeCart()"><!--<div class="numero">{{number}}</div>--></div>
   </div>
