--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -8,7 +8,7 @@
   <ion-col size=7 class="A_pagar_header">Total a Pagar:</ion-col>
   <ion-col size=5 style="display: inline-flex;">
     <p style="color:#FE3A00;font-size: 2rem;padding-right: 0.2rem; margin-top: 0">$</p>
-    <div class="A_pagar" id="A_pagar">{{total}}</div>
+    <div class="A_pagar" id="A_pagar" type="number" step="0.001">{{total}}</div>
   </ion-col>
 </ion-row>
 
