--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,28 +11,28 @@
     <ion-content style="--background: #2153FF !important;" >
       <ion-list>
         <ion-menu-toggle auto-hide="true">
-          <ion-item  routerLink="shopping-cart">Perfil</ion-item>
+          <ion-item (click)=perfil()>Perfil</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item class="menu-items" routerLink="establecimiento">Locales</ion-item>
+          <ion-item class="menu-items" routerLink="/footer/establecimiento">Locales</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="producto">Cupones</ion-item>
+          <ion-item routerLink="/footer/producto">Cupones</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="ofertas">Ofertas</ion-item>
+          <ion-item routerLink="/footer/ofertas">Ofertas</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="producto">Historial de Compras</ion-item>
+          <ion-item routerLink="/footer/producto">Historial de Compras</ion-item>
         </ion-menu-toggle>  
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="producto">Reclamos y Sugerencias</ion-item>
+          <ion-item routerLink="/footer/producto">Reclamos y Sugerencias</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="producto">Contáctanos</ion-item>
+          <ion-item routerLink="/footer/contacto">Contáctanos</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="producto">Políticas de Privacidad</ion-item>
+          <ion-item routerLink="/footer/producto">Políticas de Privacidad</ion-item>
         </ion-menu-toggle>
       </ion-list>
       <div class="social-media" style="background: #2153FF !important; ">
