[#173932772] modelo inicial de pantalla de cupones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           <ion-item class="menu-items" routerLink="establecimiento">Locales</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="producto">Cupones</ion-item>
+          <ion-item routerLink="cupones">Cupones</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
           <ion-item routerLink="ofertas">Ofertas</ion-item>
