[#173932772] mejora del diseño y funcionalidad

--- a/src/app/cupones/cupones.page.html
+++ b/src/app/cupones/cupones.page.html
@@ -4,7 +4,14 @@
 <div class= "contenedor">
   <ion-label class="titulo">Cupones</ion-label>
   <div class="contenedor-cupones" *ngFor="let cupones of cupon">
-    <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{cupon.imagen}}"  >
+    <div class="contenedor-imagen">
+      <!--<img name="imagen" src="http://cabutoshop.pythonanywhere.com{{cupon.imagen}}"  >-->
+    <img name="imagen" src="../assets/img/cupon1.png"  >
+    </div>
+    <div class="contenedor-imagen">
+      <!--<img name="imagen" src="http://cabutoshop.pythonanywhere.com{{cupon.imagen}}"  >-->
+    <img name="imagen" src="../assets/img/cupon2.png"  >
+    </div>
   </div>
 </div>
 </ion-content>
