[#173932772] ya se muestran los cupones y la opción de agregar y quitar puede mostrarse y esconderse como pide la historia

--- a/src/app/cupones/cupones.page.html
+++ b/src/app/cupones/cupones.page.html
@@ -4,16 +4,16 @@
 <div class= "contenedor">
   <ion-label class="titulo">Cupones</ion-label>
   <div class="contenedor-cupones" *ngFor="let cupones of cupon">
-    <div class="contenedor-imagen">
-      <!--<img name="imagen" src="http://cabutoshop.pythonanywhere.com{{cupon.imagen}}"  >-->
-    <img name="imagen" src="../assets/img/cupon1.png"  >
+    <div  class="contenedor-imagen"(click)=mostrar(cupones.id) id ={{cupones.nombre}}>
+      <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{cupones.imagen}}"  >
+    <div class="agregar-imagen"  id ={{cupones.id}}>
+      <img name="agregar" src="../assets/img/agregar_2.png" (click)=agregar(cupones.nombre,cupones.id) >
     </div>
-    <div class="contenedor-imagen">
-      <!--<img name="imagen" src="http://cabutoshop.pythonanywhere.com{{cupon.imagen}}"  >-->
-    <img name="imagen" src="../assets/img/cupon2.png"  >
     </div>
   </div>
 </div>
 </ion-content>
 
 <app-footer></app-footer>
+
+<!--<img name="imagen" src="../assets/img/cupon1.png"  >-->
