--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -120,6 +120,7 @@ box-shadow: 5px 5px 5px 5px #c2c2c2;
     // width: 100%;
     position: absolute;
     left: 12rem;
+    display: -webkit-inline-box;
     //right: 30px;
     //bottom:150px;
     //padding-bottom: 100px ;
