--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <!---->
 <ion-content>
- <div class ="btn_regresar"> <img src="../assets/img/atras.png" class="atras" (click)="regresar()"> </div>
+ <div class ="btn_regresar"> <img src="../assets/img/atras.png" class="atras" (click)="goProductPage()"> </div>
   <!--<ion-button style="--background: var(--ion-color-naranja-oscuro)" (click)= regresar()>Regresar</ion-button>-->
 <h2 class="Titulo">Carrito</h2>
 <ion-row class="Total">
