[#173932698] historia terminada acorde al diseño y funcionalidad indicada en la descripción del HU

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,7 +5,7 @@
         <div class= "perfil"> <ion-img [src]="usuario" (click)="change_pic(usuario)"></ion-img></div>  
       </ion-col>
       <ion-col class= "col_notifications" size= 4>
-        <div class= "notifications"> <ion-img [src]="notificacion" (click)="change_pic(notificacion)"></ion-img></div> 
+        <div class= "notifications"> <ion-img [src]="notificacion" (click)="noti()"></ion-img></div> 
       </ion-col>
       <ion-col class="col_home" size=4>
         <div class= "home"> <ion-img [src]="home" (click)="change_pic(home)"></ion-img></div>
@@ -13,3 +13,4 @@
     </ion-row>
   </ion-toolbar>
 </ion-footer>
+<!--(click)="change_pic(notificacion)"-->
