--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -416,6 +416,18 @@ div.carrito img{
     padding: 20px 20px 20px 20px;
 }
 
+.atras1{
+    position: absolute;
+    //bottom: 0;
+    //right: 0;
+    //margin: 0% 5% 0% 0%;
+    height: 4.5rem;
+    width: 4.5rem;
+    top:0;
+    left:7.5rem;
+    padding: 20px 20px 20px 20px;
+}
+
 .btn_regresar{
     text-align: center;
     display: flex;
