--- a/src/app/ofertas/ofertas.page.html
+++ b/src/app/ofertas/ofertas.page.html
@@ -19,9 +19,12 @@
                                     <h6 class="nombre-producto" name="nombre">{{productos.nombre}}</h6>
                                 </div>
                                 <div class="producto-carrito">
-                                    <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(productos.nombre)>
-                                    <input type="text" tag = "barra" name="cantidad" id="{{productos.nombre}}" disabled="true" class="estilo-cantidad" placeholder="0" value ='0' >
-                                    <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos" (click)= quitar(productos.nombre)>
+                                    <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(productos.id_unico)>
+                                    <!--<input type="text" tag = "barra" name="cantidad" id="{{productos.nombre}}" disabled="true" class="estilo-cantidad" placeholder="0" value ='0' >-->
+    
+                                    <div  id="{{productos.id_unico}}" class="cantidad estilo-cantidad" >0</div>
+    
+                                    <img src="../assets/img/restar.png" width="10" height="3" class="btn-producto" id="menos" (click)= quitar(productos.id_unico)>
                                 </div>
                             </div>
                             <div class="contener-columna-centrar">
@@ -30,7 +33,7 @@
                                     <h4 class = "descuento">${{productos.precio}}</h4>
                                 </div>
                                 <div class="carrito">
-                                    <img src="../assets/img/carrito_activo.png" width="25" height="25" (click)=carrito(productos.nombre)>
+                                    <img src="../assets/img/carrito_activo.png" width="25" height="25" (click)=carrito(productos.id_unico)>
                                 </div>
                             </div>
                         </div>
