--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,6 +5,7 @@
         <div class= "perfil"> <ion-img [src]="usuario" (click)="change_pic(usuario)"></ion-img></div>  
       </ion-col>
       <ion-col class= "col_notifications" size= 4>
+        <div class = "valor">{{number}}</div>
         <div class= "notifications"> <ion-img [src]="notificacion" (click)="noti()"></ion-img></div> 
       </ion-col>
       <ion-col class="col_home" size=4>
