Arreglos en carrito

--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -16,7 +16,7 @@
 <div *ngIf="prodLen > 0">
   <div class="contener-producto"  *ngFor="let productos of products">
       <div class="div-producto" id="{{productos.id_producto}}"  >
-        <div class = "borrar_content" ><img src="../assets/img/borrar.png" class="borrar" (click)="eliminar(productos.id_producto,productos.nombre_producto,productos.cantidad)"></div>
+        <div class = "borrar_content" ><img src="../assets/img/borrar.png" class="borrar" (click)="eliminar(productos.id_producto,productos.id_unico,productos.cantidad)"></div>
           <div class="contener-columnaI">
               <div class="producto">
                   <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{productos.imagen_producto}}"  >
@@ -47,7 +47,7 @@
 <div *ngIf="oferLen > 0">
   <div class="contener-producto"  *ngFor="let ofert of oferts">
       <div class="div-producto" id="{{ofert.id_oferta}}" >
-        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar" (click)="eliminar(ofert.id_oferta,ofert.nombre_oferta,ofert.cantidad_oferta)"></div>
+        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar" (click)="eliminar(ofert.id_oferta,ofert.id_unico,ofert.cantidad_oferta)"></div>
           <div class="contener-columnaI">
               <div class="producto">
                   <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{ofert.imagen_oferta}}"  >
@@ -77,7 +77,7 @@
 <div *ngIf="comdLen > 0">
   <div class="contener-producto"  *ngFor="let combo of combos">
       <div class="div-producto" id="{{combo.id_combo}}">
-        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar" (click)="eliminar(combo.id_combo,combo.nombre)"></div>
+        <div class = "borrar_content"><img src="../assets/img/borrar.png" class="borrar" (click)="eliminar(combo.id_unico,combo.nombre)"></div>
           <div class="contener-columnaI">
               <div class="producto">
                   <img name="imagen" src="http://cabutoshop.pythonanywhere.com{{combo.imagen}}"  >
