--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,6 +24,16 @@
     }
   }
 
+  .DetalleNoti .modal-wrapper{
+    padding-top: 50px;
+    width: 300px;
+    height: 300px; 
+    border-radius: 10px;
+    *{
+      font-family:'MyriadProSemibold' !important ;
+    }
+  }
+
   .CorrectoOferta .modal-wrapper{
     padding-top: 50px;
     width: 300px;
