--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -94,6 +94,23 @@ ion-row{
     width: 1rem;
 }
 
+.borrar_content2{
+    width: 1rem;
+    height: 1rem;
+    left:17rem;
+    top:1rem;
+    position: relative;
+    //display: flex;
+    //justify-content: flex-end;
+    text-align: right!important;
+    //margin: 0% 0% 0% 80%;
+    z-index: 9;
+}
+
+.borrar_content2 > img{
+    height: 1rem;
+    width: 1rem;
+}
 
 .nombre_producto{
     font-family: Arial;
@@ -227,6 +244,23 @@ ion-input{
     vertical-align: middle;
     //left: 12rem;
     //right: 30px;
+    //bottom:150px;
+    //padding-bottom: 100px ;
+    
+}
+
+.producto-cupon{
+    // display: flex;
+    // vertical-align: bottom;
+    // justify-content: end;
+    // width: 100%;
+    top:1.5rem;
+    position: relative;
+    display: -webkit-inline-box;
+    text-align: center;
+    vertical-align: middle;
+    //left: 12rem;
+    //right: 2rem;
     //bottom:150px;
     //padding-bottom: 100px ;
     
