[#173932772] corrección al momento de eliminar en el carrito

--- a/src/app/shopping-cart/shopping-cart.page.html
+++ b/src/app/shopping-cart/shopping-cart.page.html
@@ -128,8 +128,8 @@
           </div>
 
           <div class="contener-columna-centrar">
-              <div class="precio">
-                  <p></p><h4 name="precio" class="subtotal" id="{{cupons.id_unico}}">{{cupons.precio}}</h4>
+              <div class="precio2">
+                  <p></p><h4 name="precio" class="subtotal" id="{{cupons.id_unico}}">{{cupons.precio_cupon}}</h4>
               </div>
           </div>
       </div>
