Arreglo de errores en el carrito y guardado en storage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
           <ion-item class="menu-items" (click)="gotoOfertas()">Ofertas</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item class="menu-items" routerLink="cupones">Cupones</ion-item>
+          <ion-item class="menu-items" (click)="gotoCupons()">Cupones</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
           <ion-item class="menu-items" routerLink="ofertas">Historial de Compras</ion-item>
