--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -148,7 +148,7 @@ vertical-align: middle;
     vertical-align: middle;
     font-size: 12px;
     text-align: center;
-
+    line-height: 1.2rem;
 }
 .contener-producto{
     padding:20px 0px;
