--- a/src/app/ofertas/ofertas.page.scss
+++ b/src/app/ofertas/ofertas.page.scss
@@ -88,7 +88,7 @@ vertical-align: middle;
     vertical-align: middle;
     font-size: 12px;
     text-align: center;
-
+    line-height: 1.2rem;
 }
 .contener-producto{
     padding:10px 0px;
