cambios de logo con el icono y splash

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -46,7 +46,7 @@ ion-header{
 .logo > img{
     margin: auto;
     width: 80%;
-    height: 120%;
+    height: 150%!important;
 }
 
 .col_carrito{
@@ -83,7 +83,7 @@ ion-header{
 }
 
 .header{
-    height: 10%;
+    height: 20%!important;
 }
 
 .headerR >img{
