--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -1,10 +1,12 @@
 <!--<ion-header>-->
-  <div class = 'header'>
-  <div class= "logo" > <img src="../assets/img/header_login.png" size= 12></div>
-</div>
+  
 <!--</ion-header><br> [disabled]="form.invalid"-->
 
 <ion-content class="animated fadeIn login auth-page inicio">
+  <div class = 'header'>
+    <!--<div class= "logo" > <img src="../assets/img/header_login.png" size= 12></div>-->
+    <div class= "logo" > <img src="../assets/img/header_login_final.png" size= 12></div>
+  </div>
   <div class="contenido">
       
  <form class = "centro" #form="ngForm" (ngSubmit)="verificar(form)"> 
