--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -1,7 +1,7 @@
 <!--<ion-header>-->
   <div class = 'header'>
-  <div class ="btn_regresar"> <img src="../assets/img/regresar.png"  (click)="showLoadingR()"> </div>
-  <div class= "headerS" > <img src="../assets/img/header_registro.png" size= 12></div>
+  <div class ="btn_regresar"> <img src="../assets/img/regresar_final1.png"  (click)="showLoadingR()"> </div>
+  <div class= "headerS" > <img src="../assets/img/header_registro_final1.png" size= 12></div>
 </div>
 <!--</ion-header>[disabled]="form.invalid"-->
 
